crates/snow-lexer/tests/snapshots/lexer_tests__keywords.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Fn
  text: fn
  span:
    - 0
    - 2
- kind: Let
  text: let
  span:
    - 3
    - 6
- kind: Struct
  text: struct
  span:
    - 7
    - 13
- kind: Trait
  text: trait
  span:
    - 14
    - 19
- kind: Module
  text: module
  span:
    - 20
    - 26
- kind: Import
  text: import
  span:
    - 27
    - 33
- kind: If
  text: if
  span:
    - 34
    - 36
- kind: Else
  text: else
  span:
    - 37
    - 41
- kind: Case
  text: case
  span:
    - 42
    - 46
- kind: Match
  text: match
  span:
    - 47
    - 52
- kind: Do
  text: do
  span:
    - 53
    - 55
- kind: End
  text: end
  span:
    - 56
    - 59
- kind: Newline
  text: "\n"
  span:
    - 59
    - 60
- kind: Receive
  text: receive
  span:
    - 60
    - 67
- kind: Spawn
  text: spawn
  span:
    - 68
    - 73
- kind: Supervisor
  text: supervisor
  span:
    - 74
    - 84
- kind: Send
  text: send
  span:
    - 85
    - 89
- kind: Link
  text: link
  span:
    - 90
    - 94
- kind: Monitor
  text: monitor
  span:
    - 95
    - 102
- kind: Trap
  text: trap
  span:
    - 103
    - 107
- kind: Newline
  text: "\n"
  span:
    - 107
    - 108
- kind: Cond
  text: cond
  span:
    - 108
    - 112
- kind: With
  text: with
  span:
    - 113
    - 117
- kind: After
  text: after
  span:
    - 118
    - 123
- kind: Alias
  text: alias
  span:
    - 124
    - 129
- kind: And
  text: and
  span:
    - 130
    - 133
- kind: Or
  text: or
  span:
    - 134
    - 136
- kind: Not
  text: not
  span:
    - 137
    - 140
- kind: In
  text: in
  span:
    - 141
    - 143
- kind: For
  text: for
  span:
    - 144
    - 147
- kind: Newline
  text: "\n"
  span:
    - 147
    - 148
- kind: Pub
  text: pub
  span:
    - 148
    - 151
- kind: Impl
  text: impl
  span:
    - 152
    - 156
- kind: Type
  text: type
  span:
    - 157
    - 161
- kind: Def
  text: def
  span:
    - 162
    - 165
- kind: Return
  text: return
  span:
    - 166
    - 172
- kind: SelfKw
  text: self
  span:
    - 173
    - 177
- kind: When
  text: when
  span:
    - 178
    - 182
- kind: Where
  text: where
  span:
    - 183
    - 188
- kind: Newline
  text: "\n"
  span:
    - 188
    - 189
- kind: "True"
  text: "true"
  span:
    - 189
    - 193
- kind: "False"
  text: "false"
  span:
    - 194
    - 199
- kind: Nil
  text: nil
  span:
    - 200
    - 203
- kind: Newline
  text: "\n"
  span:
    - 203
    - 204
- kind: Eof
  text: ""
  span:
    - 204
    - 204
