crates/snow-lexer/tests/snapshots/lexer_tests__line_comment.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Comment
  text: "# this is a comment"
  span:
    - 0
    - 19
- kind: Eof
  text: ""
  span:
    - 19
    - 19
