crates/snow-lexer/tests/snapshots/lexer_tests__mixed_expression.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Let
  text: let
  span:
    - 0
    - 3
- kind: Ident
  text: result
  span:
    - 4
    - 10
- kind: Eq
  text: "="
  span:
    - 11
    - 12
- kind: Ident
  text: add
  span:
    - 13
    - 16
- kind: LParen
  text: (
  span:
    - 16
    - 17
- kind: IntLiteral
  text: "1"
  span:
    - 17
    - 18
- kind: Comma
  text: ","
  span:
    - 18
    - 19
- kind: IntLiteral
  text: "2"
  span:
    - 20
    - 21
- kind: RParen
  text: )
  span:
    - 21
    - 22
- kind: Pipe
  text: "|>"
  span:
    - 23
    - 25
- kind: Ident
  text: multiply
  span:
    - 26
    - 34
- kind: LParen
  text: (
  span:
    - 34
    - 35
- kind: IntLiteral
  text: "3"
  span:
    - 35
    - 36
- kind: RParen
  text: )
  span:
    - 36
    - 37
- kind: Eof
  text: ""
  span:
    - 37
    - 37
