crates/snow-lexer/tests/snapshots/lexer_tests__module_doc_comment.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: ModuleDocComment
  text: "##! module doc"
  span:
    - 0
    - 14
- kind: Eof
  text: ""
  span:
    - 14
    - 14
