crates/snow-lexer/tests/snapshots/lexer_tests__nested_block_comment.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Comment
  text: "#= outer #= inner =# outer =#"
  span:
    - 0
    - 29
- kind: Eof
  text: ""
  span:
    - 29
    - 29
