crates/snow-lexer/tests/snapshots/lexer_tests__newlines.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Let
  text: let
  span:
    - 0
    - 3
- kind: Ident
  text: x
  span:
    - 4
    - 5
- kind: Eq
  text: "="
  span:
    - 6
    - 7
- kind: IntLiteral
  text: "1"
  span:
    - 8
    - 9
- kind: Newline
  text: "\n"
  span:
    - 9
    - 10
- kind: Let
  text: let
  span:
    - 10
    - 13
- kind: Ident
  text: y
  span:
    - 14
    - 15
- kind: Eq
  text: "="
  span:
    - 16
    - 17
- kind: IntLiteral
  text: "2"
  span:
    - 18
    - 19
- kind: Newline
  text: "\n"
  span:
    - 19
    - 20
- kind: Let
  text: let
  span:
    - 20
    - 23
- kind: Ident
  text: z
  span:
    - 24
    - 25
- kind: Eq
  text: "="
  span:
    - 26
    - 27
- kind: Ident
  text: x
  span:
    - 28
    - 29
- kind: Plus
  text: +
  span:
    - 30
    - 31
- kind: Ident
  text: y
  span:
    - 32
    - 33
- kind: Newline
  text: "\n"
  span:
    - 33
    - 34
- kind: Eof
  text: ""
  span:
    - 34
    - 34
