crates/snow-lexer/tests/snapshots/lexer_tests__operators.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Plus
  text: +
  span:
    - 0
    - 1
- kind: Minus
  text: "-"
  span:
    - 2
    - 3
- kind: Star
  text: "*"
  span:
    - 4
    - 5
- kind: Slash
  text: /
  span:
    - 6
    - 7
- kind: Percent
  text: "%"
  span:
    - 8
    - 9
- kind: Newline
  text: "\n"
  span:
    - 9
    - 10
- kind: EqEq
  text: "=="
  span:
    - 10
    - 12
- kind: NotEq
  text: "!="
  span:
    - 13
    - 15
- kind: Lt
  text: "<"
  span:
    - 16
    - 17
- kind: Gt
  text: ">"
  span:
    - 18
    - 19
- kind: LtEq
  text: "<="
  span:
    - 20
    - 22
- kind: GtEq
  text: ">="
  span:
    - 23
    - 25
- kind: Newline
  text: "\n"
  span:
    - 25
    - 26
- kind: AmpAmp
  text: "&&"
  span:
    - 26
    - 28
- kind: PipePipe
  text: "||"
  span:
    - 29
    - 31
- kind: Bang
  text: "!"
  span:
    - 32
    - 33
- kind: Newline
  text: "\n"
  span:
    - 33
    - 34
- kind: Pipe
  text: "|>"
  span:
    - 34
    - 36
- kind: DotDot
  text: ".."
  span:
    - 37
    - 39
- kind: Diamond
  text: "<>"
  span:
    - 40
    - 42
- kind: PlusPlus
  text: ++
  span:
    - 43
    - 45
- kind: Newline
  text: "\n"
  span:
    - 45
    - 46
- kind: Eq
  text: "="
  span:
    - 46
    - 47
- kind: Arrow
  text: "->"
  span:
    - 48
    - 50
- kind: FatArrow
  text: "=>"
  span:
    - 51
    - 53
- kind: ColonColon
  text: "::"
  span:
    - 54
    - 56
- kind: Newline
  text: "\n"
  span:
    - 56
    - 57
- kind: Eof
  text: ""
  span:
    - 57
    - 57
