crates/snow-lexer/tests/snapshots/lexer_tests__receive_block_tokens.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Receive
  text: receive
  span:
    - 0
    - 7
- kind: Do
  text: do
  span:
    - 8
    - 10
- kind: End
  text: end
  span:
    - 11
    - 14
- kind: Eof
  text: ""
  span:
    - 14
    - 14
